[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/rocket_shooter.gd" type="Script" id=1]
[ext_resource path="res://scenes/rocket_launcher_model.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/particles/explosions.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.56587, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
params_diffuse_mode = 2
params_specular_mode = 2
params_blend_mode = 3
params_depth_draw_mode = 2
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.61
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.5
gravity = Vector3( 0, 0.5, 0 )

[sub_resource type="SphereMesh" id=4]

[node name="Spatial" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.999462, 0 )

[node name="StaticBody" type="StaticBody" parent="."]
script = ExtResource( 1 )

[node name="shoot" type="Timer" parent="StaticBody"]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.52886, 0, 0 )
shape = SubResource( 1 )

[node name="rocket_launcher" parent="StaticBody" instance=ExtResource( 2 )]
transform = Transform( 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0, 1, -3.11097, 0, 0 )

[node name="shoot_point" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0289413, 0, 0 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0152135, 0, 0 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="Area"]
polygon = PoolVector2Array( 10, 5, 10, -5, 0, 0 )

[node name="firing" type="Particles" parent="."]
transform = Transform( 1, 8.29044e-16, 1.47268e-30, -8.29044e-16, 1, 1.77636e-15, 9.40395e-38, -1.77636e-15, 1, -1.94217e-14, 1.77636e-15, 5.96046e-08 )
material_override = SubResource( 2 )
emitting = false
amount = 50
lifetime = 1.35
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="timeout" from="StaticBody/shoot" to="StaticBody" method="_on_shoot_timeout"]
[connection signal="body_entered" from="Area" to="StaticBody" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="StaticBody" method="_on_Area_body_exited"]

[editable path="StaticBody/rocket_launcher"]
